Kubeneretes-school/k8s-DEMO.orginal/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: example-ingress-class
spec:
  controller: "nginx.org/ingress-controller"
