Kubeneretes-school/k8s-DEMO.orginal/multi-pods.yaml
# Pod 1
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  containers:
  - name: container-1
    image: nginx
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi

# Pod 2
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
spec:
  containers:
  - name: container-2
    image: busybox
    resources:
      limits:
        cpu: 1.0m
        memory: 256Mi
